# IRmHiRegistration

./: Readme.md  pyproject.toml
data/: FTIR.h5  FTIR_stats.h5
data/landmarks/: fixed_initial.csv  fixed_test.csv  moving_initial.csv  moving_test.csv
example/: full-pipeline.ipynb
irreg/: emsc.py  io.py  normalizations.py  representations.py
irreg/registration/: abc_registrator.py  evaluator.py  landmark_based_registrator.py  sitk_registrator.py  sitk_registrator_from_json.py  utils.py
irreg/registration/schemas/: 1_affine_cg.json  2_affine_gd.json  3_bspline_lbfgs2.json  4_bspline_lbfgs2.json  sitk.schema
irreg/utils/: image.py  spectra.py
scripts/: multiPointSet_export.ijm  multiPointSet_import.ijm
